--- a/app/templates/_category_rows.html
+++ b/app/templates/_category_rows.html
@@ -6,15 +6,22 @@
     <td>{{ category.items_in_service }}</td>
     <td>{{ category.items_available }}</td>
     <td>
-        <button class="btn btn-sm btn-secondary expand-btn" onclick="window.expandCategory('{{ category.category | urlencode | replace('\'', '\\\'') | replace('\"', '\\\"') }}', 'subcat-{{ category.cat_id }}')">Expand</button>
-        <button class="btn btn-sm btn-secondary collapse-btn" style="display:none;" onclick="collapseSection('subcat-{{ category.cat_id }}')">Collapse</button>
-        <button class="btn btn-sm btn-info print-btn" data-print-level="Category" data-print-id="category-table">Print</button>
+        <button class="btn btn-sm btn-secondary expand-btn" 
+                data-target-id="common-{{ category.cat_id }}"
+                onclick="window.expandCategory('{{ category.category | urlencode | replace('\'', '\\\'') | replace('\"', '\\\"') }}', 'common-{{ category.cat_id }}')">Expand</button>
+        <button class="btn btn-sm btn-secondary collapse-btn" 
+                style="display:none;" 
+                data-collapse-target="common-{{ category.cat_id }}"
+                onclick="collapseSection('common-{{ category.cat_id }}')">Collapse</button>
+        <button class="btn btn-sm btn-info print-btn" 
+                data-print-level="Category" 
+                data-print-id="category-table">Print</button>
         <div id="loading-{{ category.cat_id }}" style="display:none;" class="loading">Loading...</div>
     </td>
 </tr>
 <tr>
     <td colspan="6">
-        <div id="subcat-{{ category.cat_id }}" class="expandable collapsed"></div>
+        <div id="common-{{ category.cat_id }}" class="expandable collapsed common-level"></div>
     </td>
 </tr>
 {% endfor %}
