--- a/app/templates/tab5.html
+++ b/app/templates/tab5.html
@@ -48,30 +48,7 @@
             </tr>
         </thead>
         <tbody id="category-rows">
-            {% for category in categories %}
-            <tr>
-                <td>{{ category.category }}</td>
-                <td>
-                    <select class="subcategory-select" data-category="{{ category.category | urlencode | replace('\'', '\\\'') | replace('\"', '\\\"') }}" onchange="loadCommonNames(this)">
-                        <option value="">Select Subcategory...</option>
-                        <!-- Subcategories will be populated dynamically via JavaScript -->
-                    </select>
-                    <div id="loading-subcat-{{ category.cat_id }}" class="loading-indicator" style="display: none;">Loading...</div>
-                </td>
-                <td>{{ category.total_items }}</td>
-                <td>{{ category.items_on_contracts }}</td>
-                <td>{{ category.items_in_service }}</td>
-                <td>{{ category.items_available }}</td>
-                <td>
-                    <button class="btn btn-sm btn-info print-btn" data-print-level="Category" data-print-id="category-table">Print Category</button>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="7">
-                    <div id="common-{{ category.cat_id }}" class="common-level expandable collapsed"></div>
-                </td>
-            </tr>
-            {% endfor %}
+            {% include '_category_rows.html' %}
         </tbody>
     </table>
 </div>
@@ -112,7 +89,7 @@ function exportSoldItemsCSV() {
 
 function bulkUpdateItems() {
     const selectedItems = document.querySelectorAll('.item-select:checked');
-    const tagIds = Array.from(selectedItems).map(checkbox => checkbox.getAttribute('data-tag-id'));
+    const tagIds = Array.from(selectedItems).map(checkbox => checkbox.value); // Use value instead of data-tag-id
     const newBinLocation = document.getElementById('bulk-bin-location').value;
     const newStatus = document.getElementById('bulk-status').value;
 
@@ -193,7 +170,11 @@ document.addEventListener('DOMContentLoaded', function() {
 
     // Apply the global filter after all subcategory dropdowns are populated
     Promise.all(promises).then(() => {
-        applyFilterToAllLevels();
+        if (typeof applyFilterToAllLevels === 'function') {
+            applyFilterToAllLevels();
+        } else {
+            console.warn('applyFilterToAllLevels function is not available');
+        }
     });
 });
 </script>
